# noodle-flights

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .vercelignore  ATTRIBUTION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  client.py  models.py  openenv.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
.github/: CODEOWNERS
.husky/: pre-push
app/: globals.css  layout.tsx  page.tsx
components/: calendar-popup.tsx  date-button.tsx  flights-booking.tsx  flights-form.tsx  location-input.tsx  menu-bar-base.tsx  menu-bar-booking.tsx  menu-bar-with-loading.tsx  menu-bar.tsx
data/: airlines.json  airports.json  planes.json
data_scripts/: build_airlines.py  build_airports.py  build_planes.py  clean_unused_logos.py  retired_airlines.csv  simple_airport_analysis.py
environments/noodle_flights/: .gitignore  README.md  noodle_flights.py  pyproject.toml
hooks/: use-airport-lookup.ts  use-flight-data.ts  use-flight-dates.ts  use-flight-filtering.ts  use-flight-locations.ts  use-flight-search-params.ts  use-flight-sorting.ts  use-popover-state.ts  use-price-history.ts  use-search-trigger.ts  use-url-state.ts
lib/: flightConfig.ts  flightGen.ts  formatters.ts  geo.ts  layoverGen.ts  sim-metadata.ts  utils.ts
providers/: flight-filters-context.tsx  flight-provider-composed.tsx  flight-provider-wrapper.tsx  flight-provider.tsx  flight-selection-context.tsx  multi-city-context.tsx  react-query-provider.tsx  search-context.tsx
scripts/: sync_prime_environment.sh
server/: Dockerfile  __init__.py  app.py  environment.py
(+58 files in other folders)
